# book2anki

./: main.py  pyproject.toml
src/: book_handler.py  csv_export.py  main.py  prompts.py  utils.py
