[tool.poetry]
name = "book2anki"
version = "0.1.0"
description = ""
authors = ["Andres Crucetta Nieto <acrucettanieto@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
openai = "^0.27.5"
pandas = "^2.0.1"
pydantic = "^1.10.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
